DECA-175: Fixed alignment of the Clear link. Added hover styling to that link. Adjusted the hover style for the Export links.

--- a/components/exporter/css/exporter.css
+++ b/components/exporter/css/exporter.css
@@ -12,7 +12,7 @@
 .ds-exporter-uploadControls {
     width: 600px;
     text-align: right;
-    padding: 10px;   
+    padding: 5px;   
 }
 
 
@@ -46,9 +46,24 @@
 
 .ds-exporter-uploadControls .ds-exporter-uploadClear {
     background: url("../../../shared/images/trash-icon-22x22-blue.png") 5px center no-repeat;
-    padding-left: 26px;
+    padding: 7px 7px 7px 26px;
     margin-right: 10px;
-    padding-top: 5px;
+    position: relative;
+    top: -10px;
+    height: 1.65em;
+    
+    -moz-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+
+.ds-exporter-uploadControls .ds-exporter-uploadClear:hover {
+    border-radius: 3px 3px 3px 3px;
+    background-color: #EAEAEA;
+    box-shadow: inset 0px 0px 1px rgba(188,188,188,0.7);
+    
+    -moz-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    cursor: pointer;
 }
 
 /**
@@ -234,8 +249,9 @@
 }
 
 .ds-exporter-exportOptions .ds-exporter-exportLinks  a:hover{
-    border-radius: 6px 6px 6px 6px;
-    background-color: #D3D3D3; 
+    border-radius: 3px 3px 3px 3px;
+    background-color: #EAEAEA;
+    box-shadow: inset 0px 0px 1px rgba(188,188,188,0.7);
 }
 
 .ds-exporter-exportOptions .ds-exporter-exportLinks .ds-exporter-exportDownload {
